--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".presentation.ui.settings.SettingsActivity"
+            android:name=".presentation.ui.settings.activity.SettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
