--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.ui.player.PlayerActivity"
+        <activity android:name=".presentation.ui.player.activity.PlayerActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
     </application>
