--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".presentation.ui.search.SearchActivity"
+            android:name=".presentation.ui.search.actyvity.SearchActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
