--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    //TextInputLayout
+    //safeargs
     //implementation 'com.androidx.support:design:28.0.0'
     // room
     implementation 'androidx.room:room-runtime:2.5.1'
