--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    //safeargs
-    //implementation 'com.androidx.support:design:28.0.0'
     // room
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'androidx.room:room-ktx:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
-    //
+    // costom toast
+    implementation 'io.github.muddz:styleabletoast:2.4.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
